Adding href for routes

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,23 @@
     <h1>Available Routes:</h1>
 <body>
     <ul>
-        <li>Get All the quotes</li>
-        <li>Get All the authors</li>
-        <li>Get a oarticular Author (Albert Einstein)</li>
-        <li>Get All the tags</li>
-        <li>Get a particular tag (Love for example)</li>
-        <li>Get Top 10 Tags</li>
+        <li><a href="http://127.0.0.1:5000/quotes"
+            target="_blank">Get All Quotes</a></li>
+        <li><a href="http://127.0.0.1:5000/authors"
+            target="_blank">Get All Authors</a></li>
+        <li><a href="http://127.0.0.1:5000/authors/Albert Einstein"
+            target="_blank">Get a particular Author (Albert Einstein)</a></li>
+        <li><a href="http://127.0.0.1:5000/tags"
+            target="_blank">Get All the tags</a></li>
+        <li><a href="http://127.0.0.1:5000/tags/love"
+            target="_blank">Get a particular tag (Love for example)</a></li>
+        <li><a 
+            href="http://127.0.0.1:5000/top10tags" 
+            target="_blank">Get Top 10 Tags</a></li>
     </ul>
 </body>
 </html>
+
+
+
+
